Bug #38370 The test ndb.ndb_index_ordered fails with the community features on
Submitted: 25 Jul 2008 12:27 Modified: 17 Oct 2008 20:20
Reporter: Georgi Kodinov
Status: Closed
Category:Tests: Cluster Severity:S3 (Non-critical)
Version:5.1 BK OS:Any
Assigned to: Georgi Kodinov Target Version:
Triage: D3 (Medium)

[25 Jul 2008 12:27] Georgi Kodinov
Description:
We will have the community fixes enabled by default in 5.1-rc.
After enabling them the test ndb.ndb_index_ordered started failing :
ndb.ndb_index_ordered          [ fail ]

---
/data0/pushbuild/pb1/pb/bzr_mysql-5.1/21/mysql-5.1.28-pb21/mysql-test/suite/ndb/r/ndb_inde
x_ordered.result	2008-07-24 20:54:39.000000000 +0300
+++
/data0/pushbuild/pb1/pb/bzr_mysql-5.1/21/mysql-5.1.28-pb21/mysql-test/suite/ndb/r/ndb_inde
x_ordered.reject	2008-07-24 23:32:26.754680508 +0300
@@ -662,15 +662,15 @@
 set autocommit=1;
 show session variables like 'ndb_index_stat_%';
 Variable_name	Value
-ndb_index_stat_cache_entries	32
+ndb_index_stat_cache_entries	0
 ndb_index_stat_enable	OFF
-ndb_index_stat_update_freq	20
+ndb_index_stat_update_freq	0
 set ndb_index_stat_enable = off;
 show session variables like 'ndb_index_stat_%';
 Variable_name	Value
-ndb_index_stat_cache_entries	32
+ndb_index_stat_cache_entries	0
 ndb_index_stat_enable	OFF
-ndb_index_stat_update_freq	20
+ndb_index_stat_update_freq	0
 create table t1 (a int, b int, c varchar(10) not null,
 primary key using hash (a), index(b,c)) engine=ndb;
 insert into t1 values
@@ -711,7 +711,7 @@
 Variable_name	Value
 ndb_index_stat_cache_entries	0
 ndb_index_stat_enable	ON
-ndb_index_stat_update_freq	20
+ndb_index_stat_update_freq	0
 create table t1 (a int, b int, c varchar(10) not null,
 primary key using hash (a), index(b,c)) engine=ndb;
 insert into t1 values
@@ -748,12 +748,16 @@
 drop table t1;
 set ndb_index_stat_enable = on;
 set ndb_index_stat_cache_entries = 4;
+Warnings:
+Warning	1292	Truncated incorrect ndb_index_stat_cache_entries value: '4'
 set ndb_index_stat_update_freq = 2;
+Warnings:
+Warning	1292	Truncated incorrect ndb_index_stat_update_freq value: '2'
 show session variables like 'ndb_index_stat_%';
 Variable_name	Value
-ndb_index_stat_cache_entries	4
+ndb_index_stat_cache_entries	0
 ndb_index_stat_enable	ON
-ndb_index_stat_update_freq	2
+ndb_index_stat_update_freq	0
 create table t1 (a int, b int, c varchar(10) not null,
 primary key using hash (a), index(b,c)) engine=ndb;
 insert into t1 values
@@ -793,9 +797,9 @@
 set ndb_index_stat_update_freq = @@global.ndb_index_stat_update_freq;
 show session variables like 'ndb_index_stat_%';
 Variable_name	Value
-ndb_index_stat_cache_entries	32
+ndb_index_stat_cache_entries	0
 ndb_index_stat_enable	OFF
-ndb_index_stat_update_freq	20
+ndb_index_stat_update_freq	0
 create table t1 (a int primary key) engine = ndb;
 insert into t1 values (1), (2), (3);
 begin;

mysqltest: Result content mismatch

Stopping All Servers
mysql-test-run: WARNING: Forcing kill of process 28931
Restoring snapshot of databases
Resuming Tests

How to repeat:
run the test suite with community features enabled (as it is by default now). 

Suggested fix:
n/a
[25 Jul 2008 19:12] Sveta Smirnova
Thank you for the report.

Verified as described.
[3 Oct 2008 12:10] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/55210

2760 Georgi Kodinov	2008-10-03
      Bug #38370: The test ndb.ndb_index_ordered fails with the community features on
      
      The problem was caused by a wrong merge. Fixed by enabling the correct ndb variables
      initialization.
[9 Oct 2008 19:52] Bugs System
Pushed into 5.1.30  (revid:kgeorge@mysql.com-20081003101009-bde901zbakcz5j0b) (version
source revid:kgeorge@mysql.com-20081007082452-gk4l86zq8k53wwyo) (pib:4)
[15 Oct 2008 17:09] Paul DuBois
This is actually pushed to 5.1.29, not 5.1.30.
[15 Oct 2008 19:41] Paul DuBois
Test case-related changes. No changelog entry needed.

Setting report to NDI pending push into 6.0.x.
[17 Oct 2008 18:42] Bugs System
Pushed into 6.0.8-alpha  (revid:kgeorge@mysql.com-20081003101009-bde901zbakcz5j0b)
(version source revid:kgeorge@mysql.com-20081007153644-uypi14yjgque9obc) (pib:5)
[17 Oct 2008 20:20] Paul DuBois
No changelog entry needed.
[28 Oct 2008 22:02] Bugs System
Pushed into 5.1.29-ndb-6.2.17  (revid:kgeorge@mysql.com-20081003101009-bde901zbakcz5j0b)
(version source revid:tomas.ulin@sun.com-20081028140209-u4emkk1xphi5tkfb) (pib:5)
[28 Oct 2008 23:21] Bugs System
Pushed into 5.1.29-ndb-6.3.19  (revid:kgeorge@mysql.com-20081003101009-bde901zbakcz5j0b)
(version source revid:tomas.ulin@sun.com-20081028194045-0353yg8cvd2c7dd1) (pib:5)
[1 Nov 2008 10:46] Bugs System
Pushed into 5.1.29-ndb-6.4.0  (revid:kgeorge@mysql.com-20081003101009-bde901zbakcz5j0b)
(version source revid:jonas@mysql.com-20081101082305-qx5a1bj0z7i8ueys) (pib:5)