Bug #38370: The test ndb.ndb_index_ordered fails with the community features on

The problem was caused by a wrong merge. Fixed by enabling the correct ndb variables
initialization.